@@ -4,6 +4,7 @@
 
 #include "include/private/SkMutex.h"
 #include "src/core/SkLRUCache.h"
+#include <functional>  // std::function
 
 #define PARAGRAPH_CACHE_STATS
 
