@@ -10,6 +10,7 @@
 #include "modules/skshaper/include/SkShaper.h"
 #include "src/core/SkSpan.h"
 #include "src/core/SkTraceEvent.h"
+#include <functional>  // std::function
 
 namespace skia {
 namespace textlayout {
